infrastructure/configs/longhorn-gateway.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth2-forward-auth
  namespace: longhorn-system
spec:
  forwardAuth:
    address: http://oauth2-proxy.oauth2-proxy.svc.cluster.local/
    trustForwardHeader: true
    maxResponseBodySize: 1048576
    addAuthCookiesToResponse:
      - _cloudlab_oauth2_proxy
    authResponseHeaders:
      - Authorization
      - X-Auth-Request-Access-Token
      - X-Auth-Request-Email
      - X-Auth-Request-Groups
      - X-Auth-Request-Preferred-Username
      - X-Auth-Request-User
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  gatewayClassName: traefik
  listeners:
    - name: https
      hostname: longhorn.kakatkarakshay.dev
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: longhorn-kakatkarakshay-dev-tls
